--- a/ScheduleUi/MainWindow.ui
+++ b/ScheduleUi/MainWindow.ui
@@ -337,6 +337,13 @@
              <item row="1" column="1">
               <layout class="QHBoxLayout" name="horizontalLayout">
                <item>
+                <widget class="QPushButton" name="findDupesButton">
+                 <property name="text">
+                  <string>Find duplicates</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
                 <widget class="QPushButton" name="addButton">
                  <property name="text">
                   <string>Add flight</string>
