Logic to create duplicate index table and display duplicate flights in shades of red

--- a/ScheduleUi/MainWindow.ui
+++ b/ScheduleUi/MainWindow.ui
@@ -339,7 +339,7 @@
                <item>
                 <widget class="QPushButton" name="findDupesButton">
                  <property name="text">
-                  <string>Find duplicates</string>
+                  <string>Create duplicate index</string>
                  </property>
                 </widget>
                </item>
