--- a/ScheduleUi/MainWindow.ui
+++ b/ScheduleUi/MainWindow.ui
@@ -530,6 +530,16 @@
                <item row="0" column="3">
                 <widget class="QLineEdit" name="designationEdit_fleet"/>
                </item>
+               <item row="0" column="6">
+                <widget class="QLabel" name="label_17">
+                 <property name="text">
+                  <string>Airline:</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="7">
+                <widget class="QComboBox" name="airlineComboBox"/>
+               </item>
               </layout>
              </item>
              <item>
