--- a/ScheduleUi/MainWindow.ui
+++ b/ScheduleUi/MainWindow.ui
@@ -558,6 +558,16 @@
                    <item row="0" column="5">
                     <widget class="QLineEdit" name="airlineEdit_aircraft_fleet"/>
                    </item>
+                   <item row="0" column="6">
+                    <widget class="QLabel" name="label_24">
+                     <property name="text">
+                      <string>Livery</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="0" column="7">
+                    <widget class="QLineEdit" name="liveryEdit_aircraft_fleet"/>
+                   </item>
                   </layout>
                  </item>
                  <item row="1" column="0">
@@ -618,7 +628,7 @@
                </widget>
               </item>
               <item>
-               <widget class="QTableWidget" name="aircraftfleetTableWidget">
+               <widget class="QTableWidget" name="aircraftFleetTableWidget">
                 <property name="minimumSize">
                  <size>
                   <width>1055</width>
@@ -1852,6 +1862,198 @@
     <hint type="destinationlabel">
      <x>760</x>
      <y>166</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>homeportEdit_aircraft_fleet</sender>
+   <signal>returnPressed()</signal>
+   <receiver>showButton_aircraft_fleet</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>173</x>
+     <y>132</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>803</x>
+     <y>190</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>regEdit_aircraft_fleet</sender>
+   <signal>returnPressed()</signal>
+   <receiver>showButton_aircraft_fleet</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>407</x>
+     <y>132</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>803</x>
+     <y>190</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>airlineEdit_aircraft_fleet</sender>
+   <signal>returnPressed()</signal>
+   <receiver>showButton_aircraft_fleet</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>605</x>
+     <y>132</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>803</x>
+     <y>190</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>liveryEdit_aircraft_fleet</sender>
+   <signal>returnPressed()</signal>
+   <receiver>showButton_aircraft_fleet</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>803</x>
+     <y>132</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>803</x>
+     <y>190</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>acTypeEdit_aircraft_fleet</sender>
+   <signal>returnPressed()</signal>
+   <receiver>showButton_aircraft_fleet</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>173</x>
+     <y>161</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>803</x>
+     <y>190</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>designationEdit_aircraft_fleet</sender>
+   <signal>returnPressed()</signal>
+   <receiver>showButton_aircraft_fleet</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>407</x>
+     <y>161</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>803</x>
+     <y>190</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>offsetEdit_aircraft_fleet</sender>
+   <signal>returnPressed()</signal>
+   <receiver>showButton_aircraft_fleet</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>605</x>
+     <y>161</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>803</x>
+     <y>190</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>radiusEdit_aircraft_fleet</sender>
+   <signal>returnPressed()</signal>
+   <receiver>showButton_aircraft_fleet</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>803</x>
+     <y>161</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>803</x>
+     <y>190</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>flTypeEdit_aircraft_fleet</sender>
+   <signal>returnPressed()</signal>
+   <receiver>showButton_aircraft_fleet</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1008</x>
+     <y>161</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>803</x>
+     <y>190</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>perfClassEdit_aircraft_fleet</sender>
+   <signal>returnPressed()</signal>
+   <receiver>showButton_aircraft_fleet</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>173</x>
+     <y>190</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>803</x>
+     <y>190</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>heavyEdit_aircraft_fleet</sender>
+   <signal>returnPressed()</signal>
+   <receiver>showButton_aircraft_fleet</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>407</x>
+     <y>190</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>803</x>
+     <y>190</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>modelEdit_aircraft_fleet</sender>
+   <signal>returnPressed()</signal>
+   <receiver>showButton_aircraft_fleet</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>605</x>
+     <y>190</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>803</x>
+     <y>190</y>
     </hint>
    </hints>
   </connection>
